--- a/Samples/Battery.Samples.csproj
+++ b/Samples/Battery.Samples.csproj
@@ -2,6 +2,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Framework\Battery.Framework.csproj" />
+    <ProjectReference Include="..\Platforms\SDL2/Battery.Framework.SDL2.csproj" />
   </ItemGroup>
 
   <PropertyGroup>
